--- a/app/src/main/res/layout/activity_carshare_detail.xml
+++ b/app/src/main/res/layout/activity_carshare_detail.xml
@@ -7,4 +7,106 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.janez.prevoz.CarshareDetail">
 
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Iz mesta"
+        android:id="@+id/tvCarshareDetailFrom"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="V mesto"
+        android:id="@+id/tvCarshareDetailTo"
+        android:layout_below="@+id/tvCarshareDetailFrom"
+        android:layout_alignParentEnd="true" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/tvCarshareDetailTo"
+        android:background="@android:color/darker_gray"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Datum"
+        android:id="@+id/tvCarshareDetailDate"
+        android:layout_alignBaseline="@+id/tvCarshareDetailPrice"
+        android:layout_alignBottom="@+id/tvCarshareDetailPrice"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Cena prevoza"
+        android:id="@+id/tvCarshareDetailPrice"
+        android:layout_marginTop="67dp"
+        android:layout_below="@+id/tvCarshareDetailTo"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Število oseb"
+        android:id="@+id/tvCarshareDetailPeople"
+        android:layout_below="@+id/tvCarshareDetailDate"
+        android:layout_alignEnd="@+id/tvCarshareDetailPrice"
+        android:layout_marginTop="35dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Zavarovanje"
+        android:id="@+id/tvCarshareDetailInsurance"
+        android:layout_centerVertical="true"
+        android:layout_alignEnd="@+id/tvCarshareDetailPeople" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Komentar"
+        android:id="@+id/tvCarshareDetailComment"
+        android:layout_below="@+id/tvCarshareDetailInsurance"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="27dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Avtor"
+        android:id="@+id/tvCarshareDetailAuthor"
+        android:layout_below="@+id/tvCarshareDetailComment"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pokliči"
+        android:id="@+id/btnCarshareDetailCall"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/btnCarshareDetailSMS" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pošlji SMS"
+        android:id="@+id/btnCarshareDetailSMS"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
