--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Išči"
         android:id="@+id/btnSearchCarshare"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/datePicker"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -29,15 +29,6 @@
         android:layout_centerHorizontal="true"
         android:hint="Kraj prihoda" />
 
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePicker"
-        android:layout_below="@+id/etToCity"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/btnSearchCarshare"
-        android:layout_alignParentEnd="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,5 +36,14 @@
         android:id="@+id/tvInfoSearchCarshare"
         android:layout_below="@+id/btnSearchCarshare"
         android:layout_alignParentStart="true" />
+
+    <DatePicker
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePicker"
+        android:layout_below="@+id/etToCity"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
