--- a/app/src/main/res/layout/adapter_listview_row.xml
+++ b/app/src/main/res/layout/adapter_listview_row.xml
@@ -12,16 +12,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/tvCarshareListHour"
-            android:layout_gravity="left|center_vertical" />
+            android:layout_gravity="left|center_vertical"
+            android:text="Datum" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:id="@+id/tvCarshareListPrice"
-            android:layout_gravity="center" />
+            android:layout_gravity="right|center_vertical"
+            android:text="Cena" />
     </FrameLayout>
 
 </LinearLayout>
