--- a/app/src/main/res/layout/activity_carshare_detail.xml
+++ b/app/src/main/res/layout/activity_carshare_detail.xml
@@ -109,4 +109,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Obvestilo"
+        android:id="@+id/btnCarshareDetailNotification"
+        android:layout_above="@+id/btnCarshareDetailCall"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
